--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   awesome_icons: ^1.1.0
   flutter_screenutil: ^5.8.4
   intl: ^0.18.1
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.2
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
