--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.2
   file_picker: ^5.3.2
+  image_picker: ^1.0.1
+  firebase_auth: ^4.6.3
+  uuid: ^3.0.7
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
