--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^4.6.3
   uuid: ^3.0.7
   get: ^4.6.5
+  rflutter_alert: ^2.0.7
 
 dev_dependencies:
   flutter_test:
