--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   uuid: ^3.0.7
   get: ^4.6.5
   rflutter_alert: ^2.0.7
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
