--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,15 @@ dependencies:
   uuid: ^3.0.7
   get: ^4.6.5
   rflutter_alert: ^2.0.7
-  animated_splash_screen: ^1.3.0
+#  animated_splash_screen: ^1.3.0
+#  flutter_native_splash: ^2.3.2
+
+#flutter_native_splash:
+#  android: true
+#  ios: true
+#  web: false
+#  color: "#FFFFFF"
+#  image: "images/logo2.png"
 
 dev_dependencies:
   flutter_test:
