--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   intl: ^0.18.1
   firebase_storage: ^11.2.3
-  firebase_core: ^2.14.0
+  firebase_core: ^2.15.1
   cloud_firestore: ^4.8.2
   file_picker: ^5.3.2
   image_picker: ^1.0.1
@@ -48,6 +48,11 @@ dependencies:
   uuid: ^3.0.7
   get: ^4.6.5
   rflutter_alert: ^2.0.7
+  flutter_local_notifications: ^15.1.0+1
+  firebase_messaging: ^14.6.7
+  flutter_timezone: ^1.0.7
+  http: ^1.1.0
+  app_settings: ^5.0.0
 #  animated_splash_screen: ^1.3.0
 #  flutter_native_splash: ^2.3.2
 
