--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_timezone: ^1.0.7
   http: ^1.1.0
   app_settings: ^5.0.0
+  timeago: ^3.5.0
 #  animated_splash_screen: ^1.3.0
 #  flutter_native_splash: ^2.3.2
 
