--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_auth: ^4.6.3
   uuid: ^3.0.7
   get: ^4.6.5
+  flutter_pdfview: ^1.2.7
+  path_provider: ^2.1.1
   rflutter_alert: ^2.0.7
   flutter_local_notifications: ^15.1.0+1
   firebase_messaging: ^14.6.7
