--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,15 @@ dependencies:
   firebase_auth: ^4.6.3
   uuid: ^3.0.7
   get: ^4.6.5
-  flutter_pdfview: ^1.2.7
   path_provider: ^2.1.1
   rflutter_alert: ^2.0.7
   flutter_local_notifications: ^15.1.0+1
   firebase_messaging: ^14.6.7
+  webview_flutter: ^4.2.4
+  webview_flutter_android:
+  webview_flutter_wkwebview: ^3.7.4
+  flutter_pdfview: ^1.3.1
+
   flutter_timezone: ^1.0.7
   http: ^1.1.0
   app_settings: ^5.0.0
